--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-react-typescript-starter",
+  "name": "servicos-marketplace",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,15 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "jiti": "^2.4.2",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "@supabase/supabase-js": "^2.39.7",
+    "react-router-dom": "^6.22.3",
+    "clsx": "^2.1.0",
+    "tailwind-merge": "^2.2.1",
+    "react-toastify": "^10.0.4",
+    "react-input-mask": "^3.0.0-alpha.2",
+    "recharts": "^2.12.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
+    "@types/react-input-mask": "^3.0.5",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
     "eslint": "^9.9.1",
