--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "tailwind-merge": "^2.2.1",
     "react-toastify": "^10.0.4",
     "react-input-mask": "^3.0.0-alpha.2",
-    "recharts": "^2.12.3"
+    "recharts": "^2.12.3",
+    "sweetalert2": "^11.10.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
